modified:   assets/NOTICES 	new file:   favicon.ico 	deleted:    favicon.png 	modified:   flutter_service_worker.js 	modified:   icons/Icon-192.png 	modified:   icons/Icon-512.png 	modified:   index.html 	modified:   main.dart.js 	modified:   manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "resume_builder",
-    "short_name": "resume_builder",
+    "name": "Augustine Victor",
+    "short_name": "Augustine Victor",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "My name is Augustine Victor, I am a flutter mobile developer.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
